--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://FergusMcGee.github.io/pages/wainwrights.html" />
+<meta http-equiv="refresh" content="0; url=http://FergusMcGee.github.io/wainwrights.html" />
