--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -11,13 +8,37 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #f4f4f4;
+                text-align: center;
+                padding-top: 50px;
+            }
+    
+            a {
+                display: inline-block;
+                margin: 10px;
+                padding: 10px 20px;
+                background-color: #07662c;
+                color: white;
+                border-radius: 5px;
+                text-decoration: none;
+                transition: background-color 0.3s;
+            }
+    
+            a:hover {
+                background-color: #0056b3;
+            }
+        </style>    
     </head>
+
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <a href="http://FergusMcGee.github.io/wainwrights.html"></a>
-        <a href="http://FergusMcGee.github.io/PeakDistrictTrigPoints.html"></a>
+        <a href="http://FergusMcGee.github.io/wainwrights.html">Wainwrights</a><br>
+        <a href="http://FergusMcGee.github.io/PeakDistrictTrigPoints.html">Peak Trig Points</a>
         <script src="" async defer></script>
     </body>
 </html>
