--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <a href="http://FergusMcGee.github.io/wainwrights.html">Wainwrights</a><br>
+        <a href="http://FergusMcGee.github.io/Wainwrights.html">Wainwrights</a><br>
         <a href="http://FergusMcGee.github.io/PeakDistrictTrigPoints.html">Peak Trig Points</a>
         <script src="" async defer></script>
     </body>
