Added weather widget

--- a/index.html
+++ b/index.html
@@ -40,5 +40,11 @@
         <a href="http://FergusMcGee.github.io/Wainwrights.html">Wainwrights</a><br>
         <a href="http://FergusMcGee.github.io/PeakDistrictTrigPoints.html">Peak Trig Points</a>
         <script src="" async defer></script>
+        <a class="metoffice-mountain-forecast"
+href="https://www.metoffice.gov.uk/weather/specialist-forecasts/mountain/peak-district"
+data-theme="_theme_">
+Peak District mountain weather on Met Office
+</a>
+<script async src="https://www.metoffice.gov.uk/public/pws/components/mountain/loader.js"></script>
     </body>
 </html>
