--- a/index.html
+++ b/index.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Maps</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #f4f4f4;
-                text-align: center;
-                padding-top: 50px;
-            }
-    
-            a {
-                display: inline-block;
-                margin: 10px;
-                padding: 10px 20px;
-                background-color: #07662c;
-                color: white;
-                border-radius: 5px;
-                text-decoration: none;
-                transition: background-color 0.3s;
-            }
-    
-            a:hover {
-                background-color: #0056b3;
-            }
-        </style>    
-    </head>
 
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <a href="http://FergusMcGee.github.io/Wainwrights.html">Wainwrights</a><br>
-        <a href="http://FergusMcGee.github.io/PeakDistrictTrigPoints.html">Peak Trig Points</a>
-        <script src="" async defer></script>
-        <a class="metoffice-mountain-forecast"
-href="https://www.metoffice.gov.uk/weather/specialist-forecasts/mountain/peak-district"
-data-theme="_theme_">
-Peak District mountain weather on Met Office
-</a>
-<script async src="https://www.metoffice.gov.uk/public/pws/components/mountain/loader.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Maps</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            padding-top: 50px;
+        }
+
+        a {
+            display: inline-block;
+            margin: 10px;
+            padding: 10px 20px;
+            background-color: #07662c;
+            color: white;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        a:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+
+<body>
+    <section>
+    <a href="http://FergusMcGee.github.io/Wainwrights.html">Wainwrights</a><br>
+    <a href="http://FergusMcGee.github.io/PeakDistrictTrigPoints.html">Peak Trig Points</a>
+</section>
+<section>
+    <script src="" async defer></script>
+    <a class="metoffice-mountain-forecast"
+        href="https://www.metoffice.gov.uk/weather/specialist-forecasts/mountain/peak-district" data-theme="_theme_">
+        Peak District mountain weather on Met Office
+    </a>
+    <script async src="https://www.metoffice.gov.uk/public/pws/components/mountain/loader.js"></script>
+
+    <script src="" async defer></script>
+    <a class="metoffice-mountain-forecast"
+        href="https://www.metoffice.gov.uk/weather/specialist-forecasts/mountain/lake-district" data-theme="_theme_">
+        Lake District mountain weather on Met Office
+    </a>
+    <script async src="https://www.metoffice.gov.uk/public/pws/components/mountain/loader.js"></script>
+
+</section>
+</body>
+
 </html>
